--- a/index.html
+++ b/index.html
@@ -98,31 +98,22 @@
             </div>
         </section>
 
-             
-
-            
+        <section class="estudios">
+            <div class="lista_estudios">
+                <ul>
+                    <li>Licenciada en comercio internacional - UADE (2016-2019)</li>
+                    <li>Autodidacta en programación - Cursos en Youtube, ivestigación propia (Java, bases de datos relacionales, JUnit, creación de PDF, proyectos propios) - (2022)</li>
+                    <li>Trayecto desarrollador Java - Argentina Programa 4.0 - UTN (2023)</li>
+                    <li>Desarrollador Fullstack con Java - Codo a Codo 4.0 - HTML, CSS, Bootstrap, Javascript, SCRUM, MySQL, Java + proyecto front + proyecto JS + proyecto final fullstack (2023)</li>
+                    <li>Desarrolladora Fullstack - Potrero Digital beca JP Morgan (2023)</li>
+                    <li>Desarrollador con especialización en Frontend con React - ALURA ONE (2023)</li>
+                    <br>
+                    <h4>Idiomas:</h4>
+                    <li>Nivel avanzado de inglés - Instituto Cambridge</li>
+                    <li>Nivel avanzado de portugués - CCBA (actual IGR)</li>
+                </ul>
             </div>
-        </section>
-        <section>
-            <div>
-                <p>Soy licenciada en comercio internacional con nivel avanzado en inglés y portugués.
-
-                    Comencé a estudiar programación en 2022 con Java de forma autodidacta y realizando proyectos personales a medida que 
-                    iba aprendiendo temas nuevos. Durante este trayecto, aprendí a trabajar con bases de datos para consultas básicas (CRUD) 
-                    y otras más complejas como order by, as, like, avg y sum; y a realizar tests básicos con JUnit. También aprendí a crear 
-                    PDF, archivos de Word y Excel, y a enviar mails mediante videos de Youtube y práctica.
-                    <br>
-                    En 2023, tuve la oportunidad de convertirme en FullStack al ganar una vacante en Argentina Programa 4.0 en el trayecto 
-                    “Desarrollador Java” de la UTN, una beca en Codo a Codo 4.0 en Desarrollador Fullstack con Java, y otra vacante en Potrero 
-                    digital para Desarrollador Fullstack (actualmente estoy cursando la primer parte del trayecto en la que se enseña desarrollo web).  
-                    <br>
-                    Estas becas de desarrollo fullstack comienzan con desarrollo web usando HTML, CSS y Bootstrap; y en instancias posteriores 
-                    se ven más tecnologías como Figma, Javascript, PHP y Spring.
-                    <br>
-                    Adicionalmente, tengo acceso a los cursos brindados por ALURA - ONE para ir aprender y desarrollar proyectos con las 
-                    tecnologías mencionadas anteriormente, junto a bases de datos relacionales (MySQL, Oracle) y no relacionales (Mongo) y Angular.</p>
-            </div>
-            <aside>
+            <aside class="titulo_estudios">
                 <h3>Estudios</h3>
             </aside>
         </section>
