personalidad e intereses listo

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                 </div>
             </div>
         </section>
-
         <section class="estudios">
             <div class="lista_estudios">
                 <ul>
@@ -117,24 +116,30 @@
                 <h3>Estudios</h3>
             </aside>
         </section>
-        <section>
-            <div>
-                <h3>Personalidad</h3>
-                <p>Me encanta estudiar y me considero bastante perfeccionista y curiosa, lo que me lleva a investigar diferentes funciones de lograr 
-                    algo específico para lograrlo de la mejor manera posible.
-                    <br>
-                    También soy muy creativa por lo que el diseño me parece fundamental y me encanta darle mi propio estilo a lo que hago.
-                    <br>
-                    Tengo capacidad para aprender rápido y soy comprometida y persistente con lo que me gusta hacer.
-                    <br>
-                    Me gusta trabajar en equipo y tengo experiencia en ello por el colegio y la facultad al hacer trabajos grupales. No tengo problema 
-                    en dar mi opinión y aportar ideas cada vez que se me ocurre alguna; y tampoco en rotar de grupos. Veo al trabajo en equipo como una 
-                    oportunidad de compartir conocimientos, resolver dudas y ayudarnos entre todos; por lo que para mi, la mejor forma de trabajar es 
-                    en equipos colaborativos.  
+        <section class="personalidad_intereses">
+            <div class="espacio_personalidad">
+                    <h3 class="titulos_pers_int">Personalidad</h3>
+                    <p>Me encanta estudiar y me considero bastante perfeccionista y curiosa, lo que me lleva a investigar diferentes
+                        funciones de lograr
+                        algo específico para lograrlo de la mejor manera posible.
+                        <br>
+                        También soy muy creativa por lo que el diseño me parece fundamental y me encanta darle mi propio estilo a lo
+                        que hago.
+                        <br>
+                        Tengo capacidad para aprender rápido y soy comprometida y persistente con lo que me gusta hacer.
+                        <br>
+                        Me gusta trabajar en equipo y tengo experiencia en ello por el colegio y la facultad al hacer trabajos
+                        grupales. No tengo problema
+                        en dar mi opinión y aportar ideas cada vez que se me ocurre alguna; y tampoco en rotar de grupos. Veo al
+                        trabajo en equipo como una
+                        oportunidad de compartir conocimientos, resolver dudas y ayudarnos entre todos; por lo que para mi, la mejor
+                        forma de trabajar es
+                        en equipos colaborativos.
                     </p>
+                </div>
             </div>
-            <div>
-                <h3>Intereses</h3>
+            <div class="espacio_interes">
+                <h3 class="titulos_pers_int">Intereses</h3>
                 <p>Me interesa crear y construir porque soy una persona muy curiosa. También me dedico a investigar diversas fuentes confiables para 
                     poder aprender y crear de forma eficiente y correcta.  
                     <br>
@@ -152,11 +157,11 @@
             <label for="">Contacto</label>
             <br>
             <img src="img/github-png.png" alt="" style="width: 20px; height: 20px;">
-            <a href="https://github.com/Daniela2-1998">https://github.com/Daniela2-1998</a>
+            <a href="https://github.com/Daniela2-1998">Daniela2-1998</a>
         </ul>
         <ul>
             <img src="img/linkedin.png" alt="" style="width: 20px; height: 20px;">
-            <a href="https://www.linkedin.com/in/daniela-mansilla-762212254/">https://www.linkedin.com/in/daniela-mansilla-762212254/</a>
+            <a href="https://www.linkedin.com/in/daniela-mansilla-762212254/">Daniela Mansilla</a>
         </ul>
     </footer>
 
