inicio listo para PC

--- a/index.html
+++ b/index.html
@@ -152,18 +152,25 @@
         </section>
     </main>
 
-    <footer>
-        <ul>
-            <label for="">Contacto</label>
-            <br>
-            <img src="img/github-png.png" alt="" style="width: 20px; height: 20px;">
-            <a href="https://github.com/Daniela2-1998">Daniela2-1998</a>
-        </ul>
-        <ul>
-            <img src="img/linkedin.png" alt="" style="width: 20px; height: 20px;">
-            <a href="https://www.linkedin.com/in/daniela-mansilla-762212254/">Daniela Mansilla</a>
-        </ul>
-    </footer>
+<footer>
+    <div class="contacto_footer">
+        <h2>Contacto:</h2>
+    </div>
+    <section class="links_footer">
+        <div>
+            <figure class="linkedin"></figure>
+            <a class="link" href="https://www.linkedin.com/in/daniela-mansilla-762212254/">Daniela Mansilla</a>
+        </div>
+        <div>
+            <figure class="githubc"></figure>
+            <a class="link" href="https://github.com/Daniela2-1998">Daniela2-1998</a>
+        </div>
+        <div>
+            <figure class="mail"></figure>
+            <p class="link">danimansilla27@gmail.com</p>
+        </div>
+    </section>
+</footer>
 
 </body>
 </html>
