--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,7 @@
                 <a class="link" href="https://www.linkedin.com/in/daniela-mansilla-762212254/">Daniela Mansilla</a>
             </div>
             <div class="datos">
-                <figure class="github"></figure>
+                <figure class="githubc"></figure>
                 <a class="link" href="https://github.com/Daniela2-1998">Daniela2-1998</a>
             </div>
             <div class="datos">
