--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -1,107 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos Daniela Mansilla</title>
+
+    <link rel="stylesheet" href="/css/proyectos-styless.css">
+    <link rel="stylesheet" href="/css/index-styless.css">
+    <link rel="stylesheet" href="/css/contacto-styless.css">
 </head>
+
 <body>
-    <nav>
-        <ul>
-            <a href="proyectos.html">Proyectos</a>
-        </ul>
-        <ul>
-            <a href="../index.html">Inicio</a>
-        </ul>
-        <ul>
-            <a href="contacto.html">Contacto</a>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navegador">
+            <ul>
+                <a href="proyectos.html">Proyectos</a>
+                <a href="../index.html">Inicio</a>
+                <a href="contacto.html">Contacto</a>
+            </ul>
+        </nav>
+    </header>
     <main>
-        <section>
-            <img src="/img/proyectos.png" alt="Logo de proyectos" style="width: 40px; height: 40px;">
+        <section class="datos_titulo">
+            <figure class="logo_materiales"></figure>
             <h1>Proyectos personales</h1>
         </section>
         <h2>Perfiles</h2>
-        <section>
-            <div>
-                <p>
-                    Podrás encontrar mis proyectos más importantes den mi perfil de GitHub o en Netlify.
-                </p>
-            </div>
-            <div>
-                <p>
-                    En GitHub verás una descripción de mi y proyectos con todos los lenguajes que manejo.
-                </p>
+        <section class="espacio-perfiles">
+            <div class="info-perfiles">
+                <div class="perfiles">
+                    <p>
+                        Podrás encontrar mis proyectos más importantes den mi perfil de GitHub o en Netlify.
+                    </p>
+                </div>
+                <div class="perfiles">
+                    <p>
+                        En GitHub verás una descripción de mi y proyectos con todos los lenguajes que manejo.
+                    </p>
+                </div>
             </div>
             <div>
                 <!-- El carousel será agregado con Bootstrap -->
-                <img src="" alt="Carousel">
+                <img src="" alt="Carousel de Bootstrap">
             </div>
         </section>
         <h2>Proyectos destacados:</h2>
-        <section>
+        <section class="proyecto">
             <h3>ComexApp - Software</h3>
             <h4>Java - Maven - PostGreSQL - Spring (JPA)</h4>
-            <img src="/img/github-png.png" alt="Logo github" style="width: 30px; height: 30px;">
-            <a href="https://github.com/Daniela2-1998/ComexApp">https://github.com/Daniela2-1998/ComexApp</a>
-            <div>
-                <p>
-                    Es un software desarrollado para empresas que comercian nacional e internacionalmente. 
-                    Su objetivo es facilitar y reunir tareas y funciones en un mismo lugar.
-                   <br>
-                    En ComexApp podrás:
-                </p>
-                <ul>
-                    <li>Crear un usuario (que se asociará a un empleado) para que tengas acceso al sistema y a las funciones disponibles para tu rol.</li>
-                    <li>Almacenar información de contactos (importadores, exportadores, agentes marítimos o aéreos, contactos privados).</li>
-                    <li>Gestionar stock de productos y suministros y asociarlos a productos provenientes de operaciones nacionales o internacionales.</li>
-                    <li>Gestionar operaciones nacionales e internacionales y poder asociarlos con los operadores, stock y contenedores.</li>
-                    <li>Colocar notas.</li>
-                    <li>Establecer objetivos con nivel de importancia, mensajes y plazos.</li>
-                    <li>Generar reportes e informes en formato de PDF automáticos y personalizados.</li>
-                    <li>Enviar mail con y sin PDF, ya sean autogenerados o personalizados.</li>
-                    <li>Cambiar contraseña y generar preguntas de seguridad.</li>
-                    <li>Gestionar empleados y usuarios.</li>
-                    <li>Gestionar propio usuario y perfil de empleado.</li>
-                    <li>Elegir preferencias en página principal.</li>
-                    <li>Generar números random.</li>
-                    <li>Administrar tiempos.</li>
-                </ul>
+            <div class="link-github">
+                <img src="/img/github-png.png" alt="Logo github" style="width: 30px; height: 30px;">
+                <a id="link-repo" href="https://github.com/Daniela2-1998/ComexApp">ComexApp</a>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="contenedor-proyecto">
+                <div class="info-proyecto">
+                    <p>
+                        Es un software desarrollado para empresas que comercian nacional e internacionalmente.
+                        Su objetivo es facilitar y reunir tareas y funciones en un mismo lugar.
+                        <br>
+                        En ComexApp podrás:
+                    </p>
+                    <ul>
+                        <li>Crear un usuario (que se asociará a un empleado) para que tengas acceso al sistema y a las
+                            funciones disponibles para tu rol.</li>
+                        <li>Almacenar información de contactos (importadores, exportadores, agentes marítimos o aéreos,
+                            contactos privados).</li>
+                        <li>Gestionar stock de productos y suministros y asociarlos a productos provenientes de
+                            operaciones nacionales o internacionales.</li>
+                        <li>Gestionar operaciones nacionales e internacionales y poder asociarlos con los operadores,
+                            stock y contenedores.</li>
+                        <li>Colocar notas.</li>
+                        <li>Establecer objetivos con nivel de importancia, mensajes y plazos.</li>
+                        <li>Generar reportes e informes en formato de PDF automáticos y personalizados.</li>
+                        <li>Enviar mail con y sin PDF, ya sean autogenerados o personalizados.</li>
+                        <li>Cambiar contraseña y generar preguntas de seguridad.</li>
+                        <li>Gestionar empleados y usuarios.</li>
+                        <li>Gestionar propio usuario y perfil de empleado.</li>
+                        <li>Elegir preferencias en página principal.</li>
+                        <li>Generar números random.</li>
+                        <li>Administrar tiempos.</li>
+                    </ul>
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
             </div>
         </section>
-        <section>
+        <section class="proyecto">
             <h3>GamersWeb - Sitio Web - En desarrollo</h3>
             <h4>HTML - CSS - Bootstrap - Javascript</h4>
-            <img src="/img/github-png.png" alt="Logo github" style="width: 30px; height: 30px;">
-            <a href="https://github.com/Daniela2-1998/GamersWeb">https://github.com/Daniela2-1998/GamersWeb</a>
-            <div>
-                <p>
-                    Sitio web diseñado para gamers que contará con diferentes funciones y secciones para que los 
-                    usuarios puedan iniciar sesión, ver videojuegos recomendados, próximos lanzamientos, juegos 
-                    estrenados recientemente, y acceder a un catálogo de videojuegos pudiendo diferenciar por 
-                    consola o año.
-                </p>
+            <div class="link-github">
+                <img src="/img/github-png.png" alt="Logo github" style="width: 30px; height: 30px;">
+                <a id="link-repo" href="https://github.com/Daniela2-1998/GamersWeb">GamersWeb</a>
             </div>
             <div>
-                <img src="" alt="Captura GamersWeb">
+                <div class="contenedor-proyecto">
+                    <div class="info-proyecto">
+                        <p>
+                            Sitio web diseñado para gamers que contará con diferentes funciones y secciones para que los
+                            usuarios puedan iniciar sesión, ver videojuegos recomendados, próximos lanzamientos, juegos
+                            estrenados recientemente, y acceder a un catálogo de videojuegos pudiendo diferenciar por
+                            consola o año.
+                        </p>
+                    </div>
+                    <div>
+                    <img src="" alt="Captura GamersWeb">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
+    
     <footer>
-        <ul>
-            <br>
-            <img src="/img/github-png.png" alt="Logo github" style="width: 20px; height: 20px;">
-            <a href="https://github.com/Daniela2-1998">https://github.com/Daniela2-1998</a>
-        </ul>
-        <ul>
-            <img src="/img/linkedin.png" alt="logo linkedin" style="width: 20px; height: 20px;">
-            <a href="https://www.linkedin.com/in/daniela-mansilla-762212254/">https://www.linkedin.com/in/daniela-mansilla-762212254/</a>
-        </ul>
+        <div class="contacto_footer">
+            <h2>Contacto:</h2>
+        </div>
+        <section class="links_footer">
+            <div>
+                <figure class="linkedin"></figure>
+                <a class="link" href="https://www.linkedin.com/in/daniela-mansilla-762212254/">Daniela Mansilla</a>
+            </div>
+            <div>
+                <figure class="githubc"></figure>
+                <a class="link" href="https://github.com/Daniela2-1998">Daniela2-1998</a>
+            </div>
+            <div>
+                <figure class="mail"></figure>
+                <p class="link">danimansilla27@gmail.com</p>
+            </div>
+        </section>
     </footer>
+
 </body>
+
 </html>
