proyecto con responsive listo

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos Daniela Mansilla</title>
 
-    <link rel="stylesheet" href="/css/proyectos-styless.css">
+    
     <link rel="stylesheet" href="/css/index-styless.css">
-    <link rel="stylesheet" href="/css/contacto-styless.css">
+    <link rel="stylesheet" href="/css/proyectos-styless.css">
 </head>
 
 <body>
@@ -83,12 +83,12 @@
                         <li>Administrar tiempos.</li>
                     </ul>
                 </div>
-                <div>
-                    <img src="" alt="">
+                <div class="contenedor-imagen">
+                    <figure class="comexapp-imagen"></figure>
                 </div>
             </div>
         </section>
-        <section class="proyecto">
+        <section id="proyecto2" class="proyecto">
             <h3>GamersWeb - Sitio Web - En desarrollo</h3>
             <h4>HTML - CSS - Bootstrap - Javascript</h4>
             <div class="link-github">
@@ -96,8 +96,8 @@
                 <a id="link-repo" href="https://github.com/Daniela2-1998/GamersWeb">GamersWeb</a>
             </div>
             <div>
-                <div class="contenedor-proyecto">
-                    <div class="info-proyecto">
+                <div id="contenedor-proyecto2" class="contenedor-proyecto">
+                    <div id="contenedor-2" class="info-proyecto">
                         <p>
                             Sitio web diseñado para gamers que contará con diferentes funciones y secciones para que los
                             usuarios puedan iniciar sesión, ver videojuegos recomendados, próximos lanzamientos, juegos
@@ -105,8 +105,9 @@
                             consola o año.
                         </p>
                     </div>
-                    <div>
-                    <img src="" alt="Captura GamersWeb">
+                    <div class="contenedor-imagen">
+                        <figure class="gamerweb-imagen"></figure>
+                        <figure id="gamerweb-2" class="gamerweb-imagen2"></figure>
                     </div>
                 </div>
             </div>
