--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav class="navegador">
             <ul>
+                <a href="../index.html">Inicio</a>
                 <a href="pages/proyectos.html">Proyectos</a>
-                <a href="index.html">Inicio</a>
                 <a href="pages/contacto.html">Contacto</a>
             </ul>
         </nav>
