--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -10,6 +10,7 @@
     
     <link rel="stylesheet" href="/css/index-styless.css">
     <link rel="stylesheet" href="/css/proyectos-styless.css">
+
 </head>
 
 <body>
@@ -41,10 +42,14 @@
                     </p>
                 </div>
             </div>
-            <div>
-                <!-- El carousel será agregado con Bootstrap -->
-                <img src="" alt="Carousel de Bootstrap">
+            <div class="imagen-perfiles">
+                <figure class="ff-web"></figure>
             </div>
+        </section>
+        <section class="espacio-boton-ver">
+            <button class="boton-ver-imagenes">
+                <a href="imagenes-proyectos.html">Imágenes</a>
+            </button>
         </section>
         <h2>Proyectos destacados:</h2>
         <section class="proyecto">
