envio de mail agregado

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
         <div>
             <figure class="mail"></figure>
-            <p class="link">danimansilla27@gmail.com</p>
+            <a class="link" href="mailto:danimansilla27@gmail.com">danimansilla27@gmail.com</a>
         </div>
     </section>
 </footer>
