--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,7 +35,7 @@
             </div>
             <div class="datos">
                 <figure class="mail"></figure>
-                <p class="link">danimansilla27@gmail.com</p>
+                <a class="link" href="mailto:danimansilla27@gmail.com">danimansilla27@gmail.com</a>
             </div>
         </section>
     </main>
