corrección de espacios y tamaños en responsivo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Porfolio Daniela Mansilla</title>
 
     <link rel="stylesheet" href="css/index-styless.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
     <header>
